# CppCourse

./: .gitignore  .gitignore.bak  CMakeLists.txt  Document.cpp  Document.h  HasContent.h  HasTitle.cpp  HasTitle.h  Invoice.cpp  Invoice.h  MyString.cpp  MyString.h  Newspaper.cpp  Newspaper.h  README.md  WorkWithAbstractions.cpp  WorkWithAbstractions.h  WorkWithDocs.cpp  WorkWithDocs.h  WorkWithInheritanceAndVirtualMethods.cpp  WorkWithInheritanceAndVirtualMethods.h  main.cpp
Google_tests/: CMakeLists.txt  DocumentTest.cpp  TestConsole.cpp  TestConsole.h  WorkWithDocsTest.cpp
UI/: AbstractConsole.h  Console.cpp  Console.h
mymath/: ArithmeticException.cpp  ArithmeticException.h
